<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
        android:key="@string/pref_battery_note_key"
        android:selectable="false"
        android:persistent="false"
        android:title="@string/pref_battery_note"
        android:summary="@string/pref_battery_note_summary"/>

    <EditTextPreference
        android:defaultValue=""
        android:inputType="textMultiLine"
        android:key="@string/pref_push_channel_key"
        android:title="@string/pref_push_channel"
        android:summary="@string/pref_push_channel_summary"/>

    <EditTextPreference
        android:defaultValue=""
        android:inputType="textEmailAddress"
        android:key="@string/pref_push_username_key"
        android:title="@string/pref_push_username"
        android:summary="@string/pref_push_username_summary"/>

    <EditTextPreference
        android:defaultValue=""
        android:maxLength="32"
        android:inputType="text"
        android:key="@string/pref_push_encryption_key"
        android:title="@string/pref_push_encryption"
        android:summary="@string/pref_push_encryption_summary"/>

    <ListPreference
        android:defaultValue="@string/pref_push_number_notifications_default"
        android:key="@string/pref_push_number_notifications_key"
        android:title="@string/pref_push_number_notifications"
        android:summary="@string/pref_push_number_notifications_summary"
        android:entries="@array/pref_push_number_notifications_entries"
        android:entryValues="@array/pref_push_number_notifications_entries_values" />

</PreferenceScreen>
